--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 body {
-  font-family: $font;
+  font-family: $font-alt;
 
   position: relative;
 
@@ -34,6 +34,8 @@ h6 {
 
 hr {
   background-color: $primary;
+  border: none;
+  height: 3px;
 }
 
 p {
@@ -141,12 +143,14 @@ a {
   text-align: center;
 
   color: white;
-  background: url('../img/intro-bg.jpg') no-repeat bottom center scroll;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url("https://images.pexels.com/photos/943974/pexels-photo-943974.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   
   .intro-body {
     display: table-cell;
@@ -202,7 +206,7 @@ a {
   padding-bottom: 150px;
 }
 
-.download-section {
+.maestro-section {
   color: white;
   background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)), url("../img/ilmaestro.jpg");
   background-repeat: no-repeat;
@@ -215,18 +219,9 @@ a {
   background-position: center;
 }
 
-#map {
-  width: 100%;
-  height: 300px;
-}
-@media(min-width:992px) {
-  .content-section {
-    padding-top: 200px;
-    padding-bottom: 200px;
-  }
-  #map {
-    height: 350px;
-  }
+.card {
+  background: rgba(0, 0, 0, 0.3);
+  color: white;
 }
 
 .btn {
@@ -239,6 +234,9 @@ a {
   text-transform: uppercase;
 
   border-radius: 0;
+/*Removes default blue shadow glow*/
+  outline: none;
+  box-shadow:none !important;
 }
 
 .btn-default {
@@ -272,9 +270,14 @@ ul.banner-social-buttons {
   }
 }
 
+.title-frame {
+  background: $primary;
+
+}
+
 #contacts {
   padding-top: 2rem;
-  background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)), url("../img/ilmaestro.jpg");
+  background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)), url("../img/BBB.jpg");
   background-repeat: no-repeat;
   background-color: black;
   -webkit-background-size: cover;
