cover img change

--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -123,7 +123,7 @@ a {
   padding: 200px 0;
   text-align: center;
   color: white;
-  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)), url("https://images.pexels.com/photos/943974/pexels-photo-943974.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)), url("../img/cover.jpg");
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
